修复json 各种细节 添加图标

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>卜卜口</title>
 <meta name="description" content="卜卜口的博客">
+<meta name="referrer" content="no-referrer">
 <div class="app"></div>
 <script type="module" src="/src/page-main.js"></script>
